Bug 48876 - RTF: RTF formatting is not correct
Summary: RTF: RTF formatting is not correct
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:3.6.0 target:3.5.4
Keywords: filter:rtf, regression
: 48559 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-18 06:54 UTC by Phillip Fanwick
Modified: 2015-12-17 12:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
An RTF file with formatting and special symbols (2.27 KB, application/rtf)
2012-04-18 06:54 UTC, Phillip Fanwick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Phillip Fanwick 2012-04-18 06:54:44 UTC
Created attachment 60249 [details]
An RTF file with formatting and special symbols

Problem description: When I open a simple rtf file the formatting (especially the fonts) is wrong.  If I clear direct formatting then the font improves but the spacing is incorrect and it ignores super and subscripts and special symbols.  I notice the property of the file is MS Word which may be correct but I would expect rtf.  I have attached a locally generated rtf file.  This file opens fine in Ted and Word but not LibreOffice.

Steps to reproduce:
1. run Libreoffice or writer and open a file with name.rtf
2. ....
3. ....

Current behavior: An unreadable display

Expected behavior: A display like in Ted or MS Word.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux i686; rv:11.0) Gecko/20100101 Firefox/11.0
Comment 1 s-joyemusequna 2012-04-18 09:20:25 UTC
Works with LibO 3.4.5 (and Word 2007).
Completely messed up with LibO 3.5.2 => REGRESSION
Tested with Windows XP and Vista 64.
Comment 2 Urmas 2012-04-19 11:39:12 UTC
There is subscript formatting leaking; also "at least" interlinear space is interpreted as "exact" one.
Comment 3 Miklos Vajna 2012-04-21 03:43:49 UTC
Reproduced. The \nosupersub bug will be fixed in 3.5.3, see bug 47326.

Assign to me for the incorrect \sl handling, will fix it in a bit.
Comment 4 Not Assigned 2012-04-21 05:41:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=99b875aee04a808fb28715fb0e143a2b00332832

fdo#48876 fix RTF import of \sl without \slmult
Comment 5 Miklos Vajna 2012-04-21 05:42:55 UTC
Marking as resolved, will cherry-pick to -3-5 later as usual.
Comment 6 Miklos Vajna 2012-04-21 06:35:26 UTC
*** Bug 48559 has been marked as a duplicate of this bug. ***
Comment 7 Not Assigned 2012-04-27 06:23:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=beef79827164be4e5a60310515fa6aaf8d76237c&g=libreoffice-3-5

fdo#48876 fix RTF import of \sl without \slmult


It will be available in LibreOffice 3.5.4.
Comment 8 s-joyemusequna 2012-05-19 00:11:20 UTC
Verified with LOdev 3.6 (master - 18-May-2012 02h44 x86@6-fast; Build ID: 8b1d29b) under Windows Vista 64.
Comment 9 Robinson Tryon (qubit) 2015-12-17 12:06:11 UTC Comment hidden (obsolete)