fdo#48876 fix RTF import of \sl without \slmult